# python

./: .ai_reference.md  .gitignore  README.md  pyproject.toml  requirements.txt  scaffold_revision.py
day1/: 00_quick_test.py  01_reference_counting.py  02_homework.py  03_production_challenge.py  QUICK_REFERENCE.md  README.md  newStart.py
day3/: day3.py  sid.txt
day4/: day4.py
day5/: day5.py  math_operation.py
day6/: ascii.py  length.py  string.py  vowel.py
day7/: even.py  positiveno.py  reverse.py  uniq.py
day8/: Readme.MD  closure.py  closuremutable.py  globalscope.py  localscope.py  nonlocalscope.py
days/day01_fundamentals/: README.md  lab_basics.py
days/day02_io_modules/: README.md
days/day03_oop_basics/: README.md
days/day04_modern_tooling/: README.md
days/day05_testing/: README.md
days/day06_devops_scripting/: README.md
days/day07_capstone_cli/: README.md
days/day08_docker/: README.md
days/day09_aws_boto3/: README.md
days/day10_data_pandas/: README.md
days/day11_ml_basics/: README.md
days/day12_model_serving/: README.md
days/day13_mlflow/: README.md
days/day14_prefect/: README.md
days/day15_kubernetes/: README.md
days/day16_cicd_ml/: README.md
days/day17_observability/: README.md
days/day18_advanced_deployment/: README.md
days/day19_20_capstone/: README.md
docker/: Dockerfile  hello.py
