[tool.poetry]
name = "python-ops-journey"
version = "0.1.0"
description = "20-Day Intensive Python, DevOps & MLOps Learning Roadmap"
authors = ["Sidharth"]

[tool.poetry.dependencies]
python = "^3.10"
boto3 = "^1.34"
typer = "^0.9"
rich = "^13.7"
structlog = "^24.1"
pydantic = "^2.6"
pandas = "^2.2"
scikit-learn = "^1.4"
mlflow = "^2.10"
fastapi = "^0.109"
uvicorn = "^0.27"
kubernetes = "^29.0"
prometheus-client = "^0.19"
prefect = "^2.16"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
ruff = "^0.2"
mypy = "^1.8"
moto = "^5.0"
httpx = "^0.26"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.mypy]
strict = true
ignore_missing_imports = true
